Input alignment fix

--- a/src/scss/_data-filter-bar.scss
+++ b/src/scss/_data-filter-bar.scss
@@ -16,6 +16,6 @@ gt-data-filter-bar {
 
   .mat-mdc-form-field-infix {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
   }
 }
